# Projekt_Dyplomowy_ISSI

./: .gitignore
Demonstrator/: demonstrator.ipynb  main.py  pyproject.toml
Demonstrator/milvus_db/volumes/etcd/member/snap/: db
Demonstrator/milvus_db/volumes/milvus/rdb_data/: 000011.sst  000017.sst  000034.sst  000038.sst  IDENTITY  LOG  LOG.old.1778302127802371  LOG.old.1778302541614685  LOG.old.1778386073276226  LOG.old.1778396729368771  LOG.old.1778405642995364  MANIFEST-000018  MANIFEST-000039
Demonstrator/milvus_db/volumes/milvus/rdb_data_meta_kv/: 000009.sst  000015.sst  000032.sst  000036.sst  IDENTITY  LOG  LOG.old.1778302127775795  LOG.old.1778302541593192  LOG.old.1778386073230603  LOG.old.1778396729330644  LOG.old.1778405642946581  MANIFEST-000016  MANIFEST-000037
Demonstrator/milvus_db/volumes/minio/.minio.sys/: format.json
Prototyp/Data_Files/: patients.csv
Prototyp/backend/: RAG.py  generate_narrative.py  load_data.py  main.py  pyproject.toml
Prototyp/backend/milvus_db/: docker-compose.yml
Prototyp/backend/milvus_db/volumes/etcd/member/snap/: db
Prototyp/backend/milvus_db/volumes/milvus/rdb_data/: IDENTITY  LOG
Prototyp/backend/milvus_db/volumes/milvus/rdb_data_meta_kv/: IDENTITY  LOG
Prototyp/backend/milvus_db/volumes/minio/.minio.sys/: format.json
Prototyp/frontend/: package-lock.json  package.json
Prototyp/frontend/src/: App.css  App.js
